--- a/README.org
+++ b/README.org
@@ -47,6 +47,11 @@ its content.
 
 ** Abril 2023
 
+*** 13-Abr-23
++ [[https://blog.ploeh.dk/2023/04/10/anagrams-kata-as-a-one-liner/][Anagrams kata as a one-liner (A futile exercise in code compaction)]]. ~ Mark Seemann (@ploeh@mastodon.social). #Haskell #FunctionalProgramming
++ [[https://rvarago.github.io/2023/03/29/haskell-little-things-one-of-n.html][Haskell, the little things (1 of N) - where clauses]]. ~ Rafael Varago. #Haskell #FunctionalProgramming
++ [[https://ciobaca.substack.com/p/pedagogical-downsides-of-haskell][Pedagogical downsides of Haskell]]. ~ Stefan Ciobaca. #Haskell #FunctionalProgramming
+
 *** 12-Abr-23
 + [[https://leanprover.zulipchat.com/user_uploads/3121/QUfQyUZWkr5Xfx5EW780Nwnn/talk.pdf][Mathematics and the computer]]. ~ Kevin Buzzard. #Math #IA #ChatGPT #ITP #LeanProver
 + [[https://well-typed.com/blog/2023/04/announcing-the-haskell-unfolder/][Announcing new YouTube series: The Haskell Unfolder]]. ~ Edsko de Vries, Andres Löh. #Haskell #FunctionalProgramming
