--- a/README.org
+++ b/README.org
@@ -48,6 +48,9 @@ its content.
 
 ** Mayo 2023
 
+*** 07-May-23
++ [[https://www.johndcook.com/blog/2023/05/06/cube-distance/][Expected distance between points in a cube]]. ~ John D. Cook (@JohnDCook). #Python #Programming #Math
+
 *** 06-May-23
 + [[https://inria.hal.science/hal-01377155/preview/abstract.pdf][Iterators: where folds fail]]. ~ Sylvie Boldo. #ITP #Coq
 + [[https://www.cantorsparadise.com/the-unlikely-heroes-of-cantors-set-theory-44685ef13292][The unlikely heroes of Cantor’s set theory]]. ~ Jason Zesheng Chen. #SetTheory #Math
